      \code{SET_TYPEOF}, \code{TRUELENGTH}, \code{XLENGTH_EX},
      and \code{XTRUELENGTH}.

      \item Memory allocation messages now use the (non-standard notation)
      \code{"Mb"}, \code{"Gb"} , \dots, and \code{"Mbytes"} strings as
      \emph{arguments} instead of as part of the (translatable format)
      string.  This is one step for \PR{18297}; from \I{Henrik Bengtsson}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check --as-cran} will compile C++ code with
      \code{-DR_NO_REMAP}.

      \item \command{R CMD check --as-cran} notes bad parts in the
      \file{DESCRIPTION} file's URL fields.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Auto-generated \code{citation()} entries no longer include
      (additional) URLs in the \samp{note} field (\PR{18547}).

      \item \code{as.data.frame.list()} gets a new option \code{new.names}
      and now preserves \code{NA} names, thus fixing the \code{format()}
      method for data frames, and also bug \PR{18745}.
      \I{Relatedly}, the \code{format()} method gets an option \code{cut.names}.

      \item \code{stem()} correctly formats also in cases where rounding
      up, e.g., from 9.96 to 10 needs more digits; thanks to
      \I{Ella Kaye} and \I{Kelly Bodwin}, fixing \PR{8934} during
      \sQuote{\I{R Dev Day}} at \I{useR!2024}.

      \item \pkg{tools}' \code{toTitleCase()} now works better, fixing
      \PR{18674}, thanks to \I{Shannon Pileggi}, \I{Sarah Zeller},
      \I{Reiko Okamoto}, and \I{Hugo Gruson}'s \sQuote{\I{R Dev Day}}
      effort.

      \item Printing matrices (typically with many rows and or columns)
      now also omits columns when desirable according to option
      \code{max.print}, or argument \code{max}, respectively.
      This is primarily the work of \I{Lorena Abad},
      \I{Ekaterina Akimova}, \I{Hanne Oberman}, \I{Abhishek Ulayil},
      and \I{Lionel Henry} at the \sQuote{\I{R Dev Day}}, thus fixing
      \PR{15027}.